--- a/codeigniter/ng6/src/app/fundoo-notes/fundoo-notes.component.css
+++ b/codeigniter/ng6/src/app/fundoo-notes/fundoo-notes.component.css
@@ -1,3 +1,4 @@
+
 .toolbar{
     background-color: #ffbf00;
 }
@@ -19,10 +20,10 @@
 .search-button {
     margin-left: 5px;
      opacity: 0.5;
-    
-    
+
+
      /* font-size: 17px; */
-    
+
      /*
     filter: alpha(opacity=50);
   } */
@@ -30,21 +31,21 @@
 }
 .button{
 width: 24px;
-   
+
 }
 /* .search-bar{
     padding-left: 40px;
     background-color: #f5b400;
     height: 30px;
     width: 50px;
-   
+
     }
 .search{
     border: none;
     outline:none;
        width: 500px;
        background-color: #f5b400;
-   
+
   background-color: #ffbf00;
 } */
 .search-bar {
@@ -54,7 +55,7 @@ width: 24px;
     display: flex;
     background-color: #f5b400;
   }
-  
+
   .search {
     margin-left:10px;
     width: 250%;
@@ -63,14 +64,153 @@ width: 24px;
     padding: 7px 20px 10px 5px;
     border: none;
   }
-  .refresh{
-   
-    width: 24px;
-    padding-left: 59px;
-  }
+  .refresh-button{
+     
+        margin-left: 75px;
+    
+    }
+    .refresh{
+        opacity: 0.5;
+        height: 24px;
+        width: 24px;
+    }
+    .view-button{
+        margin-left: 5px;
+    }
   .view{
-    padding-left: 64px;
+
+    height: 24px;
+    width: 24px;
+    opacity: 0.5;
+
+  }
+  .app-button{
+    margin-left: 30px;
+
   }
   .app{
-      padding-left: 95px;
+    height: 24px;
+    width: 24px;
+    opacity: 0.5;
+
   }
+  .bell-button{
+    margin-left: 10px;
+
+  }
+  .bell{
+    height: 24px;
+    width: 24px;
+    opacity: 0.5;
+  }
+  .sidenave-container {
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+   }
+
+.sidenav {
+    background-color: #e8e8e8;
+    padding: 20px;
+    width:260px;
+  }
+  .note-button{
+    width: 260px;
+    height: 52px;
+    margin-left: -21px;
+
+      }
+ .image-notes{
+    opacity: 0.5;
+     margin-left: -232px;
+     padding-left: 100px;
+ }
+ .note{
+    padding-left: 25px;
+ }
+
+ .reminder-button{
+
+     width: 260px;
+    height: 52px;
+    margin-left: -21px;
+    
+
+ }
+ .image-reminder{
+    opacity: 0.5;
+    margin-left: -232px;
+    padding-left: 120px;
+ }
+ .reminder{
+    padding-left: 28px;
+
+ }
+ .divider{
+    margin-top: 8px;
+}
+.label{
+    margin-top: 15px;
+}
+.label1{
+    font-size: small;
+    color: black;
+}
+.edit-button{
+    margin-left:90px;
+    font-size: 15px;
+   
+}
+.add-button{
+    width: 260px;
+    height: 52px;
+    margin-left: -21px;
+
+      }
+ .image-add{
+    /* opacity: 0.5; */
+     margin-left: -232px;
+     padding-left: 170px;
+     width: 20px;
+    height: 20px;
+ }
+ .add{
+    padding-left: 25px;
+ }
+
+ .archive-button{
+    width: 260px;
+    height: 52px;
+   padding-right: 80px;
+   margin-left: -21px;
+
+      }
+ .image-archive{
+     opacity: 0.5; 
+     margin-left: -232px;
+     padding-left: 170px;
+     width: 22px;
+    height: 22px;
+ }
+ .archive{
+    padding-left: 25px;
+ }
+ .bin-button{
+    width: 260px;
+    height: 52px;
+   padding-right: 90px;
+   margin-left: -21px;
+
+      }
+ .image-bin{
+     opacity: 0.5; 
+     margin-left: -232px;
+     padding-left: 170px;
+     width: 22px;
+    height: 22px;
+ }
+ .bin{
+    padding-left: 25px;
+ }
