--- a/codeigniter/ng6/src/app/fundoo-notes/fundoo-notes.component.html
+++ b/codeigniter/ng6/src/app/fundoo-notes/fundoo-notes.component.html
@@ -1,32 +1,95 @@
 <mat-toolbar class='toolbar'>
-    <button mat-icon-button (click)="snav.toggle()">
-        <img src="../../assets/menu1.svg" />
-      </button>
-      <span class="fundoo"> Fundoo</span> Notes
-      <!-- <span class="notes"> Notes</span> -->
-       <div class="search-bar">    
-          <button mat-icon-button class="search-button">
-             <img class="button" src="../../assets/search.svg" /> 
-          </button>
-             <input type="search" class="search" matInput placeholder="Search" />    
-      </div>
-
-      <div>
-          <button mat-icon-button>
-            <img class="refresh" src="../../assets/refresh.svg">
-            
-          </button>
-      </div>
-
-      <div>
-        <button mat-icon-button >
-            <img class="view" src="../../assets/viewList.svg">
+  <button mat-icon-button (click)="sidenav.toggle()">
+      <img src="../../assets/menu1.svg" />
+    </button>
+    <span class="fundoo"> Fundoo</span> Notes
+    <!-- <span class="notes"> Notes</span> -->
+     <div class="search-bar">    
+        <button mat-icon-button class="search-button">
+           <img class="button" src="../../assets/search.svg" /> 
         </button>
-      </div>
+           <input type="search" class="search" matInput placeholder="Search" />    
+    </div>
 
-      <div>
-          <button mat-icon-button >
-              <img class="app" src="../../assets/app.svg">
-          </button>
-        </div>
-    </mat-toolbar>
+    
+        <button mat-icon-button class="refresh-button"  aria-label="refresh">
+          <img class="refresh" src="../../assets/refresh.svg">
+          
+        </button>
+  
+      <button mat-icon-button class="view-button">
+          <img class="view" src="../../assets/viewList.svg">
+      </button>
+    
+
+    
+        <button mat-icon-button class="app-button">
+            <img class="app" src="../../assets/app.svg" style="user-select:none">
+        </button>
+      
+      
+        <button mat-icon-button class="bell-button">
+          <img class="bell" src="../../assets/bell.svg">
+        </button>
+      
+ </mat-toolbar>
+      
+         <mat-sidenav-container class="sidenave-container">  <!--structural container for our content  -->
+          <mat-sidenav #sidenav  mode="side" opened class="sidenav">    <!--added side content.-->
+            
+                <button mat-button class="note-button">
+              <img src="../../assets/notes.svg" class="image-notes">
+              <span class="note"> Notes</span>
+             </button>
+              
+             <div>
+             <button mat-button class="reminder-button">
+                <img src="../../assets/reminder.svg" class="image-reminder">
+                <span class="reminder"> Reminder</span>
+               </button>
+              </div>
+              <div>
+                  <mat-divider class="divider"></mat-divider>
+              </div>
+
+              <div class="label">
+               <span class="label1">Labels</span>
+              <!-- <button  class="edit-button" mat-button color>Edit</button>  -->
+              <button mat-button class="edit-button">EDIT</button>
+
+              </div>
+              <button mat-button class="add-button">
+                  <img src="../../assets/add.svg" class="image-add">
+                  <span class="add"> Create new label</span>
+                 </button>
+                 <div>
+                    <mat-divider class="divider"></mat-divider>
+                </div>
+
+                <button mat-button class="archive-button">
+                    <img src="../../assets/archive.svg" class="image-archive">
+                    <span class="archive"> Archive</span>
+                   </button>
+                    
+<div>
+    <button mat-button class="bin-button">
+        <img src="../../assets/delete.svg" class="image-bin">
+        <span class="bin"> BIn</span>
+       </button>
+</div>
+                
+  
+
+          </mat-sidenav>   
+          <!-- <mat-sidenav-content #snav  mode="side" opened class="sidenav">    
+          </mat-sidenav-content>                          -->
+        </mat-sidenav-container>
+   
+
+      <!-- <button mat-button class="sidebutton" style="margin-top:-10px">
+          <a href="/register">
+            <img src="../../assets/image/notes.svg" class="imageopac" />
+            <div class="button-r">Notes</div>
+          </a>
+        </button> -->
+ 
