--- a/codeigniter/ng6/src/app/login/login.component.html
+++ b/codeigniter/ng6/src/app/login/login.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="pwd">
 
-       <a href="" >Forgot Password?</a>  <!--to link the other site -->
+       <a href="/forgot-password" >Forgot Password?</a>  <!--to link the other site -->
   </div>
      <button  class="login1-full-width" mat-button color type="submit" (click)="onClickMe1()">SIGN IN</button> 
     <div align="center">
