--- a/codeigniter/ng6/src/app/forgot-password/forgot-password.component.css
+++ b/codeigniter/ng6/src/app/forgot-password/forgot-password.component.css
@@ -1,6 +1,8 @@
 .login{
     width: 431px;
 margin-left: 355px;
+margin-top: 100px;
+
 
 }
 .pass-full-width{
@@ -9,5 +11,6 @@ margin-left: 355px;
 }
 .mail-full-width{
     width: 100%;
+  
 
 }
