--- a/codeigniter/ng6/src/app/forgot-password/forgot-password.component.html
+++ b/codeigniter/ng6/src/app/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<p>
+
   <mat-card class='login'>
       <mat-card-title align="center">
           <h4>Forgot Password</h4>
@@ -9,11 +9,12 @@
           <form >
             <div>
               <mat-form-field class="mail-full-width">
-                <input matInput placeholder="Mail-id:" id="id_mail" [formControl]="emailFormControl" [(ngModel)]="model.email"> 
+                <input matInput placeholder="Mail-id:" [formControl]="emailFormControl" [(ngModel)]="model.email"> 
                 <mat-error *ngIf="emailFormControl.hasError('required')">
                   Mail id is required
                 </mat-error>
               </mat-form-field>
+             
                 <div> 
           
                   <button class="pass-full-width" mat-button color type="submit" (click)="onClickMe2()">Submit</button> 
@@ -24,4 +25,4 @@
               </mat-card-content>
      
   </mat-card> 
-</p>
+
