--- a/codeigniter/ng6/src/app/resetpassword/resetpassword.component.html
+++ b/codeigniter/ng6/src/app/resetpassword/resetpassword.component.html
@@ -24,7 +24,7 @@
             </mat-form-field>
            
               <div> 
-                <button class="pass-full-width" mat-button color type="submit" (click)="s_reset()">Submit</button> 
+                <button class="pass-full-width" mat-button color type="submit" (click)="s_reset()"> <a href="/login">Submit</a> </button> 
               </div>
               <div *ngIf="Error" class="passError">
                 Done!
