--- a/codeigniter/ng6/src/app/notes/notes.component.html
+++ b/codeigniter/ng6/src/app/notes/notes.component.html
@@ -5,7 +5,7 @@
               <input class="noteinput" placeholder="Take a note...." (click)="showHideMain()" /> 
               </mat-card-content>
       </mat-card>
-
+       
       <mat-card class="note-card1" *ngIf="createCard">
           <mat-card-content>
 
@@ -14,7 +14,7 @@
           <img class="pin" src="../../assets/pin.svg">
         </button>
       </div>
-        <input class="noteContain" placeholder="Take a note..."[(ngModel)]="model.descriptin"/>
+        <input class="noteContain" placeholder="Take a note..."[(ngModel)]="model.description"/>
         <div class="menu">
             <button mat-icon-button class="note-reminder" matTooltip="Remind Me" [matMenuTriggerFor]="menu">
                 <img class="reminder" src="../../assets/reminder.svg">
@@ -23,7 +23,7 @@
                 <button mat-menu-item>later today</button>
                 <button mat-menu-item>Tommorow</button>
                 <button mat-menu-item>Next week</button>
-                <button mat-button class="note-button">
+                <!-- <button mat-button class="note-button">
                     <img src="../../assets/outline-watch_later-24px.svg" class="image-notes">
                     <span class="note">select date and time</span>
                   </button>
@@ -31,7 +31,7 @@
                   <button mat-button class="note-button">
                     <img src="../../assets/outline-watch_later-24px.svg" class="image-notes">
                     <span class="note">select place</span>
-                  </button>
+                  </button> -->
               </mat-menu>
        
 
